--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body {
+  background-color: #f7f7f7;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 30px;
+  color: #58b792;
+}
 .centered {
   position: fixed;
   top: 50%;
@@ -8,4 +15,32 @@
 
 input {
   text-align: center;
+  font-family: monospace;
+  color: #f7f7f7;
+  font-weight: bold;
+  font-size: 25px;
+  border-radius: 4px;
+  background: rgba(0, 0, 0, 0.4);
+  padding-bottom: 7px;
+ 
+ 
+}
+#save-button {
+  font-family: monospace;
+  color: #f7f7f7;
+  font-weight: bold;
+  font-size: 25px;
+  border-radius: 4px;
+  background: rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+}
+
+#reset-button {
+  font-family: monospace;
+  color: #f7f7f7;
+  font-weight: bold;
+  font-size: 25px;
+  border-radius: 4px;
+  background: rgba(0, 0, 0, 0.4);
+  cursor: pointer;
 }
